--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "core-js": "^2.4.1",
+    "normalize.css": "^7.0.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
