Add initial localStorage support

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "i18n:all": "ngx-translate-extract --input ./src --output ./src/i18n/{en,es,de}.json --clean --sort --format namespaced-json",
-    "i18n:app": "ngx-translate-extract --input ./src/app --output ./src/i18n/app/{en,es,de}.json --patterns /*.html /*.ts --clean --sort --format namespaced-json",
+    "i18n:all": "ngx-translate-extract --input ./src --output ./src/i18n/{en,ru}.json --clean --sort --format namespaced-json",
+    "i18n:app": "ngx-translate-extract --input ./src/app --output ./src/i18n/app/{en,ru}.json --patterns /*.html /*.ts --clean --sort --format namespaced-json",
     "i18n:nav": "ngx-translate-extract --input ./src/app/nav --output ./src/i18n/nav/en.json --clean --sort --format namespaced-json",
     "i18n:main": "ngx-translate-extract --input ./src/app/main --output ./src/i18n/main/en.json --clean --sort --format namespaced-json",
     "extract": "npm run i18n:all"
